swagger documentation path fixing
